# nlp-ninjas

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: Dataset_homeless_project.xlsx  hosts.csv  ~$Dataset_homeless_project.xlsx
pycharm/: filtering.py
src/app/: app.py  speech_text.py
