[tool.poetry]
name = "nlp-ninjas"
version = "0.1.0"
description = ""
authors = ["aimorerrd <aimorerrd@hotmail.com>"]
readme = "README.md"
packages = [{ include = "nlp_ninjas" }]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.2.1"
pandas = "1.5.3"
uvicorn = "0.21.1"
fastapi = "0.95.0"
streamlit = "^1.28.2"
geopy = "^2.4.1"
folium = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
